nomes convocados fuvest

--- a/fuvest/convocados/nomes-convocados.ipynb
+++ b/fuvest/convocados/nomes-convocados.ipynb
@@ -10,13 +10,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r--  1 luciano  staff   788903 Jan 31  2008 conv2002.txt\n",
-      "-rw-r--r--  1 luciano  staff   829870 Jan 31  2008 conv2003.txt\n",
-      "-rw-r--r--@ 1 luciano  staff  1113155 Feb 21 22:33 conv2004.txt\n",
-      "-rw-r--r--  1 luciano  staff  1052062 Jan 31  2008 conv2005.txt\n",
-      "-rw-r--r--  1 luciano  staff  1050545 Jan 31  2008 conv2006.txt\n",
-      "-rw-r--r--  1 luciano  staff  1281500 Jan 31  2008 conv2007.txt\n",
-      "-rw-r--r--  1 luciano  staff  1262140 Jan 31  2008 conv2008.txt\n"
+      "-rw-rw-r-- 1 luciano luciano  788903 Feb 21 23:50 conv2002.txt\n",
+      "-rw-rw-r-- 1 luciano luciano  829870 Feb 21 23:50 conv2003.txt\n",
+      "-rw-rw-r-- 1 luciano luciano 1113155 Feb 21 23:50 conv2004.txt\n",
+      "-rw-rw-r-- 1 luciano luciano 1052062 Feb 21 23:50 conv2005.txt\n",
+      "-rw-rw-r-- 1 luciano luciano 1050545 Feb 21 23:50 conv2006.txt\n",
+      "-rw-rw-r-- 1 luciano luciano 1281500 Feb 21 23:50 conv2007.txt\n",
+      "-rw-rw-r-- 1 luciano luciano 1262140 Feb 21 23:50 conv2008.txt\n",
+      "-rw-rw-r-- 1 luciano luciano 6558093 Feb 21 23:55 convocados.txt\n"
      ]
     }
    ],
@@ -75,7 +76,7 @@
     "import sys\n",
     "\n",
     "def extrair_nomes(arquivo, quantos=sys.maxsize):\n",
-    "    \n",
+    "\n",
     "    extraidos = 0\n",
     "    with open(arquivo, encoding='ascii') as entrada:\n",
     "        for linha in entrada:\n",
@@ -168,7 +169,7 @@
     "from glob import glob\n",
     "\n",
     "nomes = set()\n",
-    "for arquivo in sorted(glob('conv*.txt')):\n",
+    "for arquivo in sorted(glob('conv200*.txt')):\n",
     "    try:\n",
     "        nomes.update(extrair_nomes(arquivo))\n",
     "    except UnicodeDecodeError as e:\n",
@@ -180,73 +181,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "f0b9e39a-9ccd-407e-96c3-34aba5343f27",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Alexandre Cortez Sabino',\n",
-       " 'Antonio Jose Pessoa Elias',\n",
-       " 'Ariane Oliveira Tartarotti',\n",
-       " 'Artur Polano Spreafico',\n",
-       " 'Bruna Rabachini',\n",
-       " 'Bruno Fernando Uehara',\n",
-       " 'Bruno Paganotti',\n",
-       " 'Camila Petris Esteve',\n",
-       " 'Danilo Fernandes Santana',\n",
-       " 'Diego Felipe Munhoz',\n",
-       " 'Eduardo Matheus Marion Jorge',\n",
-       " 'Elson Atushi Kondo',\n",
-       " 'Eric Carvalho Martins',\n",
-       " 'Fabiana de Araujo Vanin',\n",
-       " 'Felipe Elias Ribeiro David',\n",
-       " 'Felipe Sessin Di Lascio',\n",
-       " 'Gabriel Valladao Silva',\n",
-       " 'Gabriela Giacomini de Almeida',\n",
-       " 'Gisele Audrei Pedroso',\n",
-       " 'Guilherme A R T de Almeida do Amaral',\n",
-       " 'Guilherme Costa Lopes',\n",
-       " 'Gustavo Volpato',\n",
-       " 'Horacio Vianello',\n",
-       " 'Ighor Romero Fiorin Marcelino',\n",
-       " 'Joao Gomes Goncalves',\n",
-       " 'Joao Marcos Peloia',\n",
-       " 'Joao Patricio Trindade Saavedra',\n",
-       " 'Joyce Nogueira Ferreira da Costa',\n",
-       " 'Larissa de Freitas',\n",
-       " 'Leandro de Mattos Pimenta',\n",
-       " 'Lucia Lopes',\n",
-       " 'Mariana Abbate',\n",
-       " 'Mariana Correa Viana',\n",
-       " 'Marie Okumura',\n",
-       " 'Marilia Gabriela C Correa Carlos',\n",
-       " 'Marina Salzedas Giafferi',\n",
-       " 'Michelle Valerio Renart',\n",
-       " 'Natalia Yuri Tanaka Doi',\n",
-       " 'Otavio Henrique Barbosa Torres',\n",
-       " 'Paula Aryane Huang',\n",
-       " 'Paula Trovao de Sa',\n",
-       " 'Paulo Sergio Nakazone',\n",
-       " 'Rafael Sobottka Fernandes Viaccava',\n",
-       " 'Raphael Victor P Patricio Alonso',\n",
-       " 'Regivaldo Florentino Rodrigues',\n",
-       " 'Rodrigo Gozzo de Barros',\n",
-       " 'Rodrigo de Oliveira Morelli',\n",
-       " 'Sergio Henrique Limone Brocchetto',\n",
-       " 'Talita Merino de Souza',\n",
-       " 'Wilson Luiz Oliveira']"
+       "['Zilton Affonso',\n",
+       " 'Zilton Fioravante Salgado',\n",
+       " 'Zipora Maria de Carvalho Silva',\n",
+       " 'Ziza da Silva Lopes',\n",
+       " 'Ziziane Busatta de Oliveira',\n",
+       " 'Zoraia Moura da Silva',\n",
+       " 'Zozimo Adeodato Fernandes',\n",
+       " 'Zuleica Costa Zaboni',\n",
+       " 'Zuleika da C H dos Santos',\n",
+       " 'Zulene Eveline Abreu Ribeiro']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nomes = list(nomes)\n",
-    "sorted(nomes[:50])"
+    "nomes = sorted(nomes)\n",
+    "nomes[-10:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3add64cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('convocados.txt', 'w') as saida:\n",
+    "    for nome in sorted(nomes):\n",
+    "        saida.write(nome + '\\n')"
    ]
   },
   {
@@ -263,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a284e9ff-fdd6-4127-8553-9860c174ca2b",
    "metadata": {},
    "outputs": [
@@ -286,13 +259,13 @@
     "            print(linha)\n",
     "        else:\n",
     "            linhas.append(texto)\n",
-    "        \n",
+    "\n",
     "print(len(linhas))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "58297c26-9249-42f1-bd28-d60eaffe404b",
    "metadata": {},
    "outputs": [
@@ -316,12 +289,12 @@
        " ('JI', 21),\n",
        " ('OH', 20),\n",
        " ('AN', 19),\n",
-       " ('MI', 17),\n",
        " ('RE', 17),\n",
+       " ('MI', 17),\n",
        " ('BO', 16)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "011abe4e-e83c-44a5-9bfe-3122620e8f7b",
    "metadata": {},
    "outputs": [
@@ -364,35 +337,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0m\u001b[35mconv2008.txt\u001b[0m\n",
-      "\u001b[0m\u001b[32m10102\u001b[0m:8646059 Eduardo\u001b[0m\u001b[1m\u001b[31m Neto Rafael\n",
-      "\u001b[0m\u001b[32m16723\u001b[0m:4813856 Ismael de Paulo Pereira\u001b[0m\u001b[1m\u001b[31m Neto Marani\n",
-      "\u001b[0m\u001b[32m21364\u001b[0m:8818046 Lourenco Fernandes\u001b[0m\u001b[1m\u001b[31m Neto E Silva\n",
-      "\u001b[0m\u001b[32m28515\u001b[0m:4226660 Paula\u001b[0m\u001b[1m\u001b[31m Neto Homem de Montes\n",
-      "\u001b[0m\u001b[32m32522\u001b[0m:8628029 Rodrigo\u001b[0m\u001b[1m\u001b[31m Neto Pires\n",
-      "\n",
-      "\u001b[0m\u001b[35mconv2006.txt\u001b[0m\n",
-      "\u001b[0m\u001b[32m838\u001b[0m:2423065 Alina\u001b[0m\u001b[1m\u001b[31m Neto Simoes\n",
-      "\u001b[0m\u001b[32m10744\u001b[0m:3631699 Fernando Fernandes\u001b[0m\u001b[1m\u001b[31m Neto H01\n",
-      "\u001b[0m\u001b[32m13958\u001b[0m:1841026 Isabela\u001b[0m\u001b[1m\u001b[31m Neto Aguiar\n",
-      "\u001b[0m\u001b[32m14187\u001b[0m:7071422 Izabel\u001b[0m\u001b[1m\u001b[31m Neto Cardeal\n",
-      "\u001b[0m\u001b[32m16670\u001b[0m:7071625 Larissa Rodrigues\u001b[0m\u001b[1m\u001b[31m Neto Angeloco\n",
-      "\u001b[0m\u001b[32m24167\u001b[0m:2451118 Pedro\u001b[0m\u001b[1m\u001b[31m Neto Lopes de Sousa\n",
-      "\n",
-      "\u001b[0m\u001b[35mconv2007.txt\u001b[0m\n",
-      "\u001b[0m\u001b[32m5110\u001b[0m:7004474 Bruno\u001b[0m\u001b[1m\u001b[31m Neto Batista\n",
-      "\u001b[0m\u001b[32m10399\u001b[0m:7643372 Eduardo\u001b[0m\u001b[1m\u001b[31m Neto Rafael\n",
-      "\u001b[0m\u001b[32m17080\u001b[0m:4146881 Ismael de Paulo Pereira\u001b[0m\u001b[1m\u001b[31m Neto Marani\n",
-      "\u001b[0m\u001b[32m18041\u001b[0m:5182243 Joao\u001b[0m\u001b[1m\u001b[31m Neto Campos dos Santos\n",
-      "\u001b[0m\u001b[32m18042\u001b[0m:7616464 Joao\u001b[0m\u001b[1m\u001b[31m Neto Prudente de Andrade\n",
-      "\u001b[0m\u001b[32m28971\u001b[0m:3129822 Paula\u001b[0m\u001b[1m\u001b[31m Neto Homem de Montes\n",
-      "\u001b[0m\u001b[32m29678\u001b[0m:2332524 Pedro\u001b[0m\u001b[1m\u001b[31m Neto Lopes de Sousa\n",
+      "\u001b[0m\u001b[35mconv2002.txt\u001b[0m\n",
+      "\u001b[0m413 Natalia\u001b[0m\u001b[1m\u001b[31m Neto Pereira\n",
+      "\u001b[0m717 Silvana\u001b[0m\u001b[1m\u001b[31m Neto dos Reis\n",
       "\n",
       "\u001b[0m\u001b[35mconv2003.txt\u001b[0m\n",
       "\u001b[0m666 Debora\u001b[0m\u001b[1m\u001b[31m Neto Zampier\n",
       "\u001b[0m943 Hamilton\u001b[0m\u001b[1m\u001b[31m Neto Funchal\n",
       "\u001b[0m766 Marcelo\u001b[0m\u001b[1m\u001b[31m Neto Serra\n",
       "\u001b[0m450 Sergio\u001b[0m\u001b[1m\u001b[31m Neto Ribeiro\n",
+      "\n",
+      "\u001b[0m\u001b[35mconv2004.txt\u001b[0m\n",
+      "\u001b[0m\u001b[32m10046\u001b[0m:20042213556 Felipe Tadeu\u001b[0m\u001b[1m\u001b[31m Neto Viveiro\n",
+      "\u001b[0m\u001b[32m13288\u001b[0m:20041605636 Isabela\u001b[0m\u001b[1m\u001b[31m Neto Aguiar\n",
+      "\u001b[0m\u001b[32m13490\u001b[0m:20048440169 Izabel\u001b[0m\u001b[1m\u001b[31m Neto Cardeal\n",
+      "\u001b[0m\u001b[32m14003\u001b[0m:20042817970 Joao Marcos\u001b[0m\u001b[1m\u001b[31m Neto de Carvalho\n",
+      "\u001b[0m\u001b[32m20223\u001b[0m:20042844831 Marina\u001b[0m\u001b[1m\u001b[31m Neto de Carvalho\n",
+      "\u001b[0m\u001b[32m21764\u001b[0m:20048483512 Nerielen Martins\u001b[0m\u001b[1m\u001b[31m Neto Fracalozzi\n",
+      "\u001b[0m\u001b[32m23212\u001b[0m:20044209161 Priscila\u001b[0m\u001b[1m\u001b[31m Neto da Silva\n",
+      "\u001b[0m\u001b[32m26463\u001b[0m:20043848551 Sergio\u001b[0m\u001b[1m\u001b[31m Neto Ribeiro\n",
       "\n",
       "\u001b[0m\u001b[35mconv2005.txt\u001b[0m\n",
       "\u001b[0m\u001b[32m912\u001b[0m:2930936 Aline Carolina\u001b[0m\u001b[1m\u001b[31m Neto Amorim\n",
@@ -405,19 +368,60 @@
       "\u001b[0m\u001b[32m16648\u001b[0m:6924700 Larissa Rodrigues\u001b[0m\u001b[1m\u001b[31m Neto Angeloco\n",
       "\u001b[0m\u001b[32m21085\u001b[0m:2113279 Marina\u001b[0m\u001b[1m\u001b[31m Neto de Carvalho\n",
       "\n",
-      "\u001b[0m\u001b[35mconv2004.txt\u001b[0m\n",
-      "\u001b[0m\u001b[32m10046\u001b[0m:20042213556 Felipe Tadeu\u001b[0m\u001b[1m\u001b[31m Neto Viveiro\n",
-      "\u001b[0m\u001b[32m13288\u001b[0m:20041605636 Isabela\u001b[0m\u001b[1m\u001b[31m Neto Aguiar\n",
-      "\u001b[0m\u001b[32m13490\u001b[0m:20048440169 Izabel\u001b[0m\u001b[1m\u001b[31m Neto Cardeal\n",
-      "\u001b[0m\u001b[32m14003\u001b[0m:20042817970 Joao Marcos\u001b[0m\u001b[1m\u001b[31m Neto de Carvalho\n",
-      "\u001b[0m\u001b[32m20223\u001b[0m:20042844831 Marina\u001b[0m\u001b[1m\u001b[31m Neto de Carvalho\n",
-      "\u001b[0m\u001b[32m21764\u001b[0m:20048483512 Nerielen Martins\u001b[0m\u001b[1m\u001b[31m Neto Fracalozzi\n",
-      "\u001b[0m\u001b[32m23212\u001b[0m:20044209161 Priscila\u001b[0m\u001b[1m\u001b[31m Neto da Silva\n",
-      "\u001b[0m\u001b[32m26463\u001b[0m:20043848551 Sergio\u001b[0m\u001b[1m\u001b[31m Neto Ribeiro\n",
+      "\u001b[0m\u001b[35mconv2007.txt\u001b[0m\n",
+      "\u001b[0m\u001b[32m5110\u001b[0m:7004474 Bruno\u001b[0m\u001b[1m\u001b[31m Neto Batista\n",
+      "\u001b[0m\u001b[32m10399\u001b[0m:7643372 Eduardo\u001b[0m\u001b[1m\u001b[31m Neto Rafael\n",
+      "\u001b[0m\u001b[32m17080\u001b[0m:4146881 Ismael de Paulo Pereira\u001b[0m\u001b[1m\u001b[31m Neto Marani\n",
+      "\u001b[0m\u001b[32m18041\u001b[0m:5182243 Joao\u001b[0m\u001b[1m\u001b[31m Neto Campos dos Santos\n",
+      "\u001b[0m\u001b[32m18042\u001b[0m:7616464 Joao\u001b[0m\u001b[1m\u001b[31m Neto Prudente de Andrade\n",
+      "\u001b[0m\u001b[32m28971\u001b[0m:3129822 Paula\u001b[0m\u001b[1m\u001b[31m Neto Homem de Montes\n",
+      "\u001b[0m\u001b[32m29678\u001b[0m:2332524 Pedro\u001b[0m\u001b[1m\u001b[31m Neto Lopes de Sousa\n",
       "\n",
-      "\u001b[0m\u001b[35mconv2002.txt\u001b[0m\n",
-      "\u001b[0m413 Natalia\u001b[0m\u001b[1m\u001b[31m Neto Pereira\n",
-      "\u001b[0m717 Silvana\u001b[0m\u001b[1m\u001b[31m Neto dos Reis\n"
+      "\u001b[0m\u001b[35mconv2006.txt\u001b[0m\n",
+      "\u001b[0m\u001b[32m838\u001b[0m:2423065 Alina\u001b[0m\u001b[1m\u001b[31m Neto Simoes\n",
+      "\u001b[0m\u001b[32m10744\u001b[0m:3631699 Fernando Fernandes\u001b[0m\u001b[1m\u001b[31m Neto H01\n",
+      "\u001b[0m\u001b[32m13958\u001b[0m:1841026 Isabela\u001b[0m\u001b[1m\u001b[31m Neto Aguiar\n",
+      "\u001b[0m\u001b[32m14187\u001b[0m:7071422 Izabel\u001b[0m\u001b[1m\u001b[31m Neto Cardeal\n",
+      "\u001b[0m\u001b[32m16670\u001b[0m:7071625 Larissa Rodrigues\u001b[0m\u001b[1m\u001b[31m Neto Angeloco\n",
+      "\u001b[0m\u001b[32m24167\u001b[0m:2451118 Pedro\u001b[0m\u001b[1m\u001b[31m Neto Lopes de Sousa\n",
+      "\n",
+      "\u001b[0m\u001b[35mconv2008.txt\u001b[0m\n",
+      "\u001b[0m\u001b[32m10102\u001b[0m:8646059 Eduardo\u001b[0m\u001b[1m\u001b[31m Neto Rafael\n",
+      "\u001b[0m\u001b[32m16723\u001b[0m:4813856 Ismael de Paulo Pereira\u001b[0m\u001b[1m\u001b[31m Neto Marani\n",
+      "\u001b[0m\u001b[32m21364\u001b[0m:8818046 Lourenco Fernandes\u001b[0m\u001b[1m\u001b[31m Neto E Silva\n",
+      "\u001b[0m\u001b[32m28515\u001b[0m:4226660 Paula\u001b[0m\u001b[1m\u001b[31m Neto Homem de Montes\n",
+      "\u001b[0m\u001b[32m32522\u001b[0m:8628029 Rodrigo\u001b[0m\u001b[1m\u001b[31m Neto Pires\n",
+      "\n",
+      "\u001b[0m\u001b[35mconvocados.txt\u001b[0m\n",
+      "\u001b[0m\u001b[32m4539\u001b[0m:Alina\u001b[0m\u001b[1m\u001b[31m Neto Simoes\u001b[0m\n",
+      "\u001b[0m\u001b[32m4747\u001b[0m:Aline Carolina\u001b[0m\u001b[1m\u001b[31m Neto Amorim\u001b[0m\n",
+      "\u001b[0m\u001b[32m21928\u001b[0m:Bruno\u001b[0m\u001b[1m\u001b[31m Neto Batista\u001b[0m\n",
+      "\u001b[0m\u001b[32m40266\u001b[0m:Debora\u001b[0m\u001b[1m\u001b[31m Neto Zampier\u001b[0m\n",
+      "\u001b[0m\u001b[32m45485\u001b[0m:Eduardo\u001b[0m\u001b[1m\u001b[31m Neto Rafael\u001b[0m\n",
+      "\u001b[0m\u001b[32m54838\u001b[0m:Felipe Tadeu\u001b[0m\u001b[1m\u001b[31m Neto Viveiro\u001b[0m\n",
+      "\u001b[0m\u001b[32m57612\u001b[0m:Fernando Fernandes\u001b[0m\u001b[1m\u001b[31m Neto H01\u001b[0m\n",
+      "\u001b[0m\u001b[32m70237\u001b[0m:Hamilton\u001b[0m\u001b[1m\u001b[31m Neto Funchal\u001b[0m\n",
+      "\u001b[0m\u001b[32m74184\u001b[0m:Isabela\u001b[0m\u001b[1m\u001b[31m Neto Aguiar\u001b[0m\n",
+      "\u001b[0m\u001b[32m74716\u001b[0m:Ismael de Paulo Pereira\u001b[0m\u001b[1m\u001b[31m Neto Marani\u001b[0m\n",
+      "\u001b[0m\u001b[32m75404\u001b[0m:Izabel\u001b[0m\u001b[1m\u001b[31m Neto Cardeal\u001b[0m\n",
+      "\u001b[0m\u001b[32m78420\u001b[0m:Joao Marcos\u001b[0m\u001b[1m\u001b[31m Neto de Carvalho\u001b[0m\n",
+      "\u001b[0m\u001b[32m78480\u001b[0m:Joao\u001b[0m\u001b[1m\u001b[31m Neto Campos dos Santos\u001b[0m\n",
+      "\u001b[0m\u001b[32m78481\u001b[0m:Joao\u001b[0m\u001b[1m\u001b[31m Neto Prudente de Andrade\u001b[0m\n",
+      "\u001b[0m\u001b[32m80870\u001b[0m:Jose\u001b[0m\u001b[1m\u001b[31m Neto da Silva Soares\u001b[0m\n",
+      "\u001b[0m\u001b[32m80938\u001b[0m:Jose Pereira da Silva\u001b[0m\u001b[1m\u001b[31m Neto H01\u001b[0m\n",
+      "\u001b[0m\u001b[32m80939\u001b[0m:Jose Pereira da Silva\u001b[0m\u001b[1m\u001b[31m Neto H02\u001b[0m\n",
+      "\u001b[0m\u001b[32m88732\u001b[0m:Larissa Rodrigues\u001b[0m\u001b[1m\u001b[31m Neto Angeloco\u001b[0m\n",
+      "\u001b[0m\u001b[32m94914\u001b[0m:Lourenco Fernandes\u001b[0m\u001b[1m\u001b[31m Neto E Silva\u001b[0m\n",
+      "\u001b[0m\u001b[32m104626\u001b[0m:Marcelo\u001b[0m\u001b[1m\u001b[31m Neto Serra\u001b[0m\n",
+      "\u001b[0m\u001b[32m113037\u001b[0m:Marina\u001b[0m\u001b[1m\u001b[31m Neto de Carvalho\u001b[0m\n",
+      "\u001b[0m\u001b[32m120724\u001b[0m:Natalia\u001b[0m\u001b[1m\u001b[31m Neto Pereira\u001b[0m\n",
+      "\u001b[0m\u001b[32m122458\u001b[0m:Nerielen Martins\u001b[0m\u001b[1m\u001b[31m Neto Fracalozzi\u001b[0m\n",
+      "\u001b[0m\u001b[32m126120\u001b[0m:Paula\u001b[0m\u001b[1m\u001b[31m Neto Homem de Montes\u001b[0m\n",
+      "\u001b[0m\u001b[32m129206\u001b[0m:Pedro\u001b[0m\u001b[1m\u001b[31m Neto Lopes de Sousa\u001b[0m\n",
+      "\u001b[0m\u001b[32m130563\u001b[0m:Priscila\u001b[0m\u001b[1m\u001b[31m Neto da Silva\u001b[0m\n",
+      "\u001b[0m\u001b[32m144256\u001b[0m:Rodrigo\u001b[0m\u001b[1m\u001b[31m Neto Pires\u001b[0m\n",
+      "\u001b[0m\u001b[32m148264\u001b[0m:Sergio\u001b[0m\u001b[1m\u001b[31m Neto Ribeiro\u001b[0m\n",
+      "\u001b[0m\u001b[32m148798\u001b[0m:Silvana\u001b[0m\u001b[1m\u001b[31m Neto dos Reis\u001b[0m\n"
      ]
     }
    ],
