--- a/fuvest/nomes/nomes-isentos.ipynb
+++ b/fuvest/nomes/nomes-isentos.ipynb
@@ -10,32 +10,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30647\n"
+      "65277\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[('Ana Paula da Silva', 9),\n",
-       " ('Ana Maria dos Santos', 4),\n",
-       " ('Ana Paula de Oliveira', 4),\n",
-       " ('Ana Paula dos Santos', 4),\n",
-       " ('Jose Carlos da Silva', 4),\n",
-       " ('Adriana da Silva', 3),\n",
-       " ('Amanda Cristina da Silva', 3),\n",
-       " ('Ana Lucia dos Santos', 3),\n",
-       " ('Bruna Ferreira', 3),\n",
-       " ('Camila Silva Santos', 3),\n",
-       " ('Carlos Alberto da Silva', 3),\n",
-       " ('Claudio Ferreira da Silva', 3),\n",
-       " ('Debora Cristina da Silva', 3),\n",
-       " ('Douglas da Silva', 3),\n",
-       " ('Eduardo Nunes da Silva', 3),\n",
-       " ('Fabio da Silva Santos', 3),\n",
-       " ('Jessica Alves da Silva', 3),\n",
-       " ('Juliana Goncalves', 3),\n",
-       " ('Marcelo Rodrigues da Silva', 3),\n",
-       " ('Marcia Maria da Silva', 3)]"
+       "[('Ana Paula da Silva', 19),\n",
+       " ('Ana Paula dos Santos', 8),\n",
+       " ('Maria Aparecida da Silva', 7),\n",
+       " ('Maria Jose da Silva', 7),\n",
+       " ('Ana Carolina da Silva', 6),\n",
+       " ('Ana Paula de Souza', 6),\n",
+       " ('Fernanda Silva dos Santos', 5),\n",
+       " ('Juliana Ferreira da Silva', 5),\n",
+       " ('Kelly Cristina da Silva', 5),\n",
+       " ('Luana Alves da Silva', 5),\n",
+       " ('Luciana Maria da Silva', 5),\n",
+       " ('Luis Carlos da Silva', 5),\n",
+       " ('Luiz Carlos da Silva', 5),\n",
+       " ('Rafael Ferreira da Silva', 5),\n",
+       " ('Simone Rodrigues dos Santos', 5),\n",
+       " ('Vera Lucia da Silva', 5),\n",
+       " ('Adriana Aparecida da Silva', 4),\n",
+       " ('Adriana da Silva', 4),\n",
+       " ('Aline da Silva Santos', 4),\n",
+       " ('Ana Lucia da Silva', 4)]"
       ]
      },
      "execution_count": 1,
@@ -47,7 +47,7 @@
     "from collections import Counter\n",
     "from glob import glob\n",
     "\n",
-    "ANO = 2008  # isen2006 é o maior arquivo\n",
+    "ANO = 2006  # isen2006 é o maior arquivo\n",
     "\n",
     "def extrair_nomes(linhas):\n",
     "    for linha in linhas:\n",
